@@ -38,6 +38,7 @@ import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CMC_CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.GENERALAPPLICATION_CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.civil.utils.CaseServiceUtil.getCaseServiceId;
 
 @Service
 @Slf4j
@@ -80,11 +81,14 @@ public class CoreCaseDataService {
                                               String eventSummary,
                                               String eventDescription) {
 
+        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
+        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
         List<LocationRefData> locationRefDataList = referenceDataService.getCourtLocationsByEpimmsId(
             getSystemUpdateUser().getUserToken(),
-            epimdsId
+            epimdsId,
+            getCaseServiceId(caseData.getCaseAccessCategory())
         );
-        LocationRefData locationRefData = locationRefDataList.get(0);
+        LocationRefData locationRefData = locationRefDataList.getFirst();
 
         DynamicListElement dynamicListElement = new DynamicListElement();
         dynamicListElement.setCode(UUID.randomUUID().toString());
@@ -92,9 +96,6 @@ public class CoreCaseDataService {
 
         DynamicList transferCourtLocationList = new DynamicList();
         transferCourtLocationList.setValue(dynamicListElement);
-
-        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
-        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
 
         caseData.setTransferCourtLocationList(transferCourtLocationList);
         caseData.setReasonForTransfer(transferReason);
